adds trail difficulty to trail show

--- a/views/trails/new.ejs
+++ b/views/trails/new.ejs
@@ -54,9 +54,9 @@
             <label for="difficulty">Difficulty</label>
                 <br />
             <select name="difficulty" required>
-                <option value="easy">Easy</option>
-                <option value="moderate">Moderate</option>
-                <option value="difficult"></option>
+                <option value="Easy">Easy</option>
+                <option value="Moderate">Moderate</option>
+                <option value="Difficult">Difficult</option>
             </select>
                 <br />
             <label for="description">Description</label>
