--- a/public/styles/trails-show.css
+++ b/public/styles/trails-show.css
@@ -122,7 +122,8 @@ a {
     color: var(--white);
     font-size: 14px;
     transition: .3s;
-    font-family: var(--small-font)
+    font-family: var(--small-font);
+    outline: none;
 }
 
 /* main text */
@@ -186,6 +187,7 @@ button  {
     color: var(--green);
     background-color: var(--tan);
     transition: .3s;
+    outline: none;
 }
 
 button:hover {
