--- a/public/styles/cities-show.css
+++ b/public/styles/cities-show.css
@@ -207,6 +207,7 @@ button{
     font-size: 20px;
     color: var(--green);
     transition: .3s;
+    outline: none;
 }
 
 button:hover{
@@ -252,6 +253,14 @@ a {
     color: var(--white);
 }
 
-a i:hover{
-    color: var(--light-green)
+i.fa-instagram:hover {
+    color: var(--light-green);
+}
+
+i.fa-facebook-f:hover {
+    color: var(--light-green);
+}
+
+i.fa-twitter:hover {
+    color: var(--light-green);
 }
